--- a/project.html
+++ b/project.html
@@ -70,7 +70,7 @@
                 <a class="brand" href="#" style="color:#0088cc">ServiceDesk</a>
                 <div class="nav-collapse collapse">
                     <ul class="nav" id="main_menu">
-                        <li class="active"><a href="#" id="projects">Проекты</a></li>
+                        <li class="active"><a href="#" id="projects">Проекты пользователя</a></li>
                         {% if isAdmin %}
                         <li><a href="#" id="users">Пользователи</a></li>
                         <li><a href="#" id="allprojects">Все проекты</a></li>
