User can delete their projects

--- a/project.html
+++ b/project.html
@@ -109,6 +109,10 @@
                                 <tr>
                                     <td style="display:none" class="project_key">{{p.key}}</td>
                                     <td class="project_name">{{ p.name }}</td>
+                                    <td>
+                                        <a class="btn-small btn-warning delete_user_project" href="#" title="Удалить">
+                                            <i class="icon-remove"></i></a>
+                                    </td>
                                 </tr>
                                 {% endfor %}
 
