Code clean-up; removed debug output and reformatted couple of files

--- a/project.html
+++ b/project.html
@@ -167,9 +167,8 @@
                                             <i class="icon-remove"></i></a>
                                     </td>
                                     <td>
-                                        <input type="text" class="btn-mini assigned_user_name" style="width:80%;">
-                                    </td>
-                                    <td>
+                                        Логин пользователя: <input type="text" class="btn-mini assigned_user_name"
+                                                                   style="width:40%;">
                                         <a class="btn-small btn-success" href="#" id=
                                                 'assign_project_to_user' title="Добавить в проекты пользователя"><i
                                                 class="icon-plus"></i></a></td>
